--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
         <!--Home Page View Controller-->
@@ -61,10 +60,6 @@
                                     <segue destination="MMj-ql-9Hz" kind="modal" modalTransitionStyle="partialCurl" id="s1Y-Mq-piX"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="Student Council.png" id="Xl2-7t-Voa">
-                                <rect key="frame" x="10" y="408" width="170" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Block rotation shown on school days" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="GT6-3R-RtS">
                                 <rect key="frame" x="20" y="136" width="280" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -118,6 +113,10 @@
                                     <segue destination="2vz-CH-Ns3" kind="modal" id="S7M-mh-2aM"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="Sentinel Athletics.png" id="Sq9-Tc-ixd">
+                                <rect key="frame" x="7" y="407" width="201" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -732,7 +731,7 @@
         <image name="Home-arrow2.png" width="50" height="50"/>
         <image name="SSS2-1.png" width="450" height="168"/>
         <image name="School Info and Events.png" width="640" height="109"/>
-        <image name="Student Council.png" width="450" height="90"/>
+        <image name="Sentinel Athletics.png" width="500" height="90"/>
         <image name="Welcome-1.png" width="380" height="90"/>
         <image name="bird_32_black.png" width="32" height="32"/>
     </resources>
@@ -760,6 +759,7 @@
         <class className="FeedbackViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FeedbackViewController.h"/>
             <relationships>
+                <relationship kind="action" name="buttonPressed:"/>
                 <relationship kind="action" name="feedback:"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
@@ -767,6 +767,11 @@
         <class className="HomePageViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomePageViewController.h"/>
             <relationships>
+                <relationship kind="action" name="longPressDetected:" candidateClass="UIGestureRecognizer"/>
+                <relationship kind="action" name="pinchDetected:" candidateClass="UIGestureRecognizer"/>
+                <relationship kind="action" name="rotationDetected:" candidateClass="UIGestureRecognizer"/>
+                <relationship kind="action" name="swipeDetected:" candidateClass="UIGestureRecognizer"/>
+                <relationship kind="action" name="tapDetected:" candidateClass="UIGestureRecognizer"/>
                 <relationship kind="outlet" name="about" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="dayLabel" candidateClass="UILabel"/>
