--- a/Sentinel/StandingsCustomCell.xib
+++ b/Sentinel/StandingsCustomCell.xib
@@ -42,7 +42,7 @@
 							<object class="IBUILabel" id="915412771">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{8, 3}, {136, 21}}</string>
+								<string key="NSFrame">{{8, 7}, {136, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="860129661"/>
@@ -64,12 +64,14 @@
 								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="158263807">
-									<int key="type">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="757211818">
+									<string key="name">Marion-Regular</string>
+									<string key="family">Marion</string>
+									<int key="traits">0</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="81488275">
-									<string key="NSName">Helvetica</string>
+								<object class="NSFont" key="IBUIFont" id="832256724">
+									<string key="NSName">Marion-Regular</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -77,7 +79,7 @@
 							<object class="IBUILabel" id="860129661">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{159, 3}, {28, 21}}</string>
+								<string key="NSFrame">{{159, 7}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="87722767"/>
@@ -92,13 +94,13 @@
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158263807"/>
-								<reference key="IBUIFont" ref="81488275"/>
+								<reference key="IBUIFontDescription" ref="757211818"/>
+								<reference key="IBUIFont" ref="832256724"/>
 							</object>
 							<object class="IBUILabel" id="87722767">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{195, 3}, {28, 21}}</string>
+								<string key="NSFrame">{{195, 7}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="691850390"/>
@@ -113,13 +115,13 @@
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158263807"/>
-								<reference key="IBUIFont" ref="81488275"/>
+								<reference key="IBUIFontDescription" ref="757211818"/>
+								<reference key="IBUIFont" ref="832256724"/>
 							</object>
 							<object class="IBUILabel" id="691850390">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{226, 3}, {28, 21}}</string>
+								<string key="NSFrame">{{226, 7}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="261799806"/>
@@ -134,13 +136,13 @@
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158263807"/>
-								<reference key="IBUIFont" ref="81488275"/>
+								<reference key="IBUIFontDescription" ref="757211818"/>
+								<reference key="IBUIFont" ref="832256724"/>
 							</object>
 							<object class="IBUILabel" id="261799806">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{256, 3}, {28, 21}}</string>
+								<string key="NSFrame">{{256, 7}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -154,13 +156,13 @@
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158263807"/>
-								<reference key="IBUIFont" ref="81488275"/>
+								<reference key="IBUIFontDescription" ref="757211818"/>
+								<reference key="IBUIFont" ref="832256724"/>
 							</object>
 							<object class="IBUILabel" id="5025519">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{292, 3}, {28, 21}}</string>
+								<string key="NSFrame">{{292, 7}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -174,8 +176,8 @@
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158263807"/>
-								<reference key="IBUIFont" ref="81488275"/>
+								<reference key="IBUIFontDescription" ref="757211818"/>
+								<reference key="IBUIFont" ref="832256724"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{325, 27}</string>
